# MAI_IR

./: README.md
lab_cpp/: CMakeLists.txt
lab_cpp/src/: binary_utils.hpp  custom_map.hpp  indexer.cpp  indexer.hpp  main_lab3.cpp  main_lab4.cpp  main_search.cpp  query_parser.cpp  query_parser.hpp  search_engine.cpp  search_engine.hpp  stemmer.cpp  stemmer.hpp  tokenizer.cpp  tokenizer.hpp
lab_cpp/src/tests/: test_runner.hpp  tests.cpp
report_latex/: main.tex
robot/: analyzer.py  config.yaml  docker-compose.yml  export_corpus.py  main.py  requirements.txt
robot/init_db/: 01_schema.sql
robot/src/: crawler.py  database.py  parser.py  utils.py
tools/: export_corpus.py  plot_zipf.py
web_ui/: app.py
